--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -433,7 +433,7 @@ a.btn {
 .profile-item-container {
   background-color: #EFF5F3;
   background-color: @sectionColor;
-  padding: 1.5em 2em;
+  padding: 1.5em 2.3em;
   border-radius: 8px;
   margin: 0.5em auto;
   border: 1px solid @sectionBorderColor;
@@ -988,6 +988,12 @@ color: #777
 -webkit-box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
 -moz-box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
 box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
+}
+
+#eventListtnthproc a.confirm-delete {
+  font-size: 0.90em;
+  margin-left: 0.5em;
+  padding: 0.38em;
 }
 
 /** Responsive sizes **/
