--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -428,7 +428,7 @@
                 </label>
             </div>
         </div>
-   
+
         <script>$(function () {
 
         tnthAjax.getRoles({{ person.id }}, true);
@@ -502,11 +502,11 @@
                         var reportLink = '/patients/sessionReport/' + sessionUserId + '/epic26';
                         sessionListHTML += '<tr title="Click to view report"  ' +
                                             (index % 2 != 0 ? 'class="odd"': 'class="even"') + '>' +
-                                            [entry['questionnaire']['display'], 
-                                             entry['status'], 
+                                            [entry['questionnaire']['display'],
+                                             entry['status'],
                                              String(entries[0]['authored']).replace(/[tz]/gi, " ")].map(function(o) {
                                                 return  '<td><a href="' + reportLink + '">' + o + '</a></td>'
-                                             }).join('') + 
+                                             }).join('') +
                                              '</tr>';
 	                	});
 	                	$("#userSessionListTable").append(sessionListHTML);
@@ -533,7 +533,7 @@
             <br />
         </div>
         <script>
-        
+
         function _isTouchDevice(){
             return true == ("ontouchstart" in window || window.DocumentTouch && document instanceof DocumentTouch);
         };
@@ -667,7 +667,7 @@
                     <h4 class="profile-item-title">Clinical Data</h4>
                     <div class="flex">
                         <div>
-                            {{profileProcedures(person)}}
+                            {{profileProcedures(person, current_user)}}
                         </div>
                     </div>
                 </div>
@@ -694,46 +694,49 @@
     {% endif %}
 {%- endmacro %}
 
-{% macro profileProcedures(person) -%}
+{% macro profileProcedures(person, current_user) -%}
 <script src="{{ url_for('static', filename='js/procedures.js') }}"></script>
-<p>Which of the following prostate cancer treatments have you had, if any? If you don&#39;t remember the exact
+<style>
+    .treatment-container {margin-left:1em;}
+</style>
+<p>Which of the following prostate cancer treatments {%if current_user.has_role('provider') and current_user.id != person.id %}has the patient{%else%}have you{%endif%} had, if any? If you don&#39;t remember the exact
     date, please make your best guess.<span class="text-muted smaller-text"></span></p>
+<div style="margin-left: 1em">
+    <div style="margin: 1em 0">
+        <p class="text-muted">Your treatments:</p>
+        <div id="userProcedures"></div>
 
-<div style="margin: 1em 0">
-    <p>Your treatments:</p>
-    <div id="userProcedures"></div>
-
-</div>
-<p>Add a treatment:</p>
-<form class="form-inline event-element" style='margin-left: 1em'>
-    <div class='form-group' style="margin: 0.5em 0.5em 0 0">
-        <select class='form-control' id='tnthproc'>
-            <option value=''>Select treatment...</option>
-            <option value='373818007'>Started watchful waiting</option>
-            <option value='424313000'>Started active surveillance</option>
-            <option value='26294005'>Radical prostatectomy (nerve-sparing)</option>
-            <option value='26294005-nns'>Radical prostatectomy (non-nerve-sparing)</option>
-            <option value='33195004'>External beam radiation therapy</option>
-            <option value='228748004'>Brachytherapy</option>
-            <option value='707266006'>Androgen deprivation therapy</option>
-            <option value='999999999'>None of the above</option>
-        </select>
     </div>
-    <div class='form-group' style="margin: 0.5em 0.5em 0 0">
-        <label>Date:</label>
-        <div class="input-group date">
-            <input class='event-value form-control' type='text' placeholder='MM/DD/YYYY' maxlength='10' id='tnthproc-date' name='tnthproc-date'/>
-            <span class="input-group-addon">
-                <i class="fa fa-calendar"></i>
-            </span>
+    <p class="text-muted">Add a treatment:</p>
+    <form class="form-inline event-element" style='margin-left: 1em'>
+        <div class='form-group' style="margin: 0 0.5em 0 0">
+            <select class='form-control' id='tnthproc'>
+                <option value=''>Select treatment...</option>
+                <option value='373818007'>Started watchful waiting</option>
+                <option value='424313000'>Started active surveillance</option>
+                <option value='26294005'>Radical prostatectomy (nerve-sparing)</option>
+                <option value='26294005-nns'>Radical prostatectomy (non-nerve-sparing)</option>
+                <option value='33195004'>External beam radiation therapy</option>
+                <option value='228748004'>Brachytherapy</option>
+                <option value='707266006'>Androgen deprivation therapy</option>
+                <option value='999999999'>None of the above</option>
+            </select>
         </div>
+        <div class='form-group' style="margin: 0.5em 0.5em 0 0">
+            <label>Date:</label>
+            <div class="input-group date">
+                <input class='event-value form-control' type='text' placeholder='MM/DD/YYYY' maxlength='10' id='tnthproc-date' name='tnthproc-date'/>
+                <span class="input-group-addon">
+                    <i class="fa fa-calendar"></i>
+                </span>
+            </div>
 
-    </div>
-    <button class='btn btn-default hidden disabled' id='tnthproc-submit' name='tnthproc' data-name='' data-date='' data-date-read='' disabled>
-        <i class='fa fa-plus'></i> Add Procedure
-    </button>
-</form>
-
+        </div>
+        <button class='btn btn-default hidden disabled' id='tnthproc-submit' name='tnthproc' data-name='' data-date='' data-date-read='' disabled>
+            <i class='fa fa-plus'></i> Add Procedure
+        </button>
+    </form>
+<div>
 <script>
     var subjectId = {{ person.id }};
 
