css fix for challenge form

--- a/portal/templates/challenge_identity.html
+++ b/portal/templates/challenge_identity.html
@@ -6,7 +6,7 @@
         .label {color: #777; font-size: 0.9em; margin-left: -8px; position: relative; top:-3px;}
         .field {margin-top: 1.2em;}
         .hr {margin-top: -8px;}
-        .text-muted { color: #9e9c9c;}
+        .text-muted { color: #808080;}
         .error-message { margin-left: 0; display: none;}
     </style>
     <h4 class="tnth-headline">Identity Verification</h4>
