Procedures form in patient profile: refining editing privileges/messaging

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -739,6 +739,7 @@
 <div>
 <script>
     var subjectId = {{ person.id }};
+    var currentUserId = {{ current_user.id }};
 
 $(document).ready(function(){
 
