--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -954,11 +954,8 @@ color: #777
 }
 
 #identityVerificationContainer {
-  width: 50%;
-  padding: 2em 3em;
-  margin: 1em 0;
-  border: 1px solid @sectionBorderColor;
-  border-radius: 4px;
+  padding: 2em 1.5em;
+  margin: 1em auto;
   input {
     width: 100%;
     max-width: 100%;
@@ -972,12 +969,6 @@ color: #777
 -webkit-box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
 -moz-box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
 box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
-}
-
-#eventListtnthproc a.confirm-delete {
-  font-size: 0.90em;
-  margin-left: 0.5em;
-  padding: 0.38em;
 }
 
 
