--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -8,18 +8,18 @@
 
 <hr/>
 
-{% if patients_by_org|length > 1 %}
+{% if org_list_by_parent|length > 1 %}
 <div class="small orgLinks">
     <p>Skip to:</p>
-    <ul style="list-style-type: none">
-        {% set orgCountLink = 1 %}
-        {% for id, name in org_list | dictsort %}
-            {% if id not in all_top_level_ids %}
-              <ul style="list-style-type: disc"><li><a href="#location{{name | replace(" ", "_")}}">{{ name }}</a></li></ul>
-            {% else %}
-              <li><a href="#location{{name | replace(" ", "_")}}">{{ name }}</a></li>
-            {% endif %}
-        {% set orgCountLink = orgCountLink + 1 %}
+    <ul style="list-style-type: circle">
+        {% for parent_id in org_list_by_parent | sort %}
+          {% for org in org_list_by_parent[parent_id] %}
+              {% if org.id != parent_id %}
+                <ul style="list-style-type: disc"><li><a href="#location{{org.id}}">{{ org.name }}</a></li></ul>
+              {% else %}
+                <li><a href="#location{{org.id}}">{{ org.name }}</a></li>
+              {% endif %}
+          {% endfor %}
         {% endfor %}
     </ul>
 </div>
@@ -27,63 +27,64 @@
 
 
 <hr />
+{% for parent_id in org_list_by_parent | sort%}
+  {% set orgCount = 1 %}
+  {% for org in org_list_by_parent[parent_id] %}
+      <div class="admin-table table-responsive smaller-text">
+          <h4 id="location{{org.id}}">{{ org.name }} Patients</h4>
+          {% if config.PROVIDER_BULK_DATA_ACCESS %}
 
-{% set orgCount = 1 %}
-{% for id, name in org_list | dictsort %}
-<div class="admin-table table-responsive smaller-text">
-    <h4 id="location{{name | replace(" ", "_")}}">{{ name }} Patients</h4>
-    {% if config.PROVIDER_BULK_DATA_ACCESS %}
+              <a href="javascript:void(0)" id="patientDataDownload{{org.id}}" class="btn btn-tnth-primary" data-toggle="modal" data-target="#dataDownloadModal">Download patient list for this clinic</a>
+              <a href="javascript:void(0)" id="patientAssessmentDownload{{org.id}}" class="btn btn-tnth-primary" data-toggle="modal" data-target="#dataDownloadModal">Download patient assessment data for this clinic</a>
 
-        <a href="javascript:void(0)" id="patientDataDownload{{ orgCount }}" class="btn btn-tnth-primary" data-toggle="modal" data-target="#dataDownloadModal">Download patient list for this clinic</a>
-        <a href="javascript:void(0)" id="patientAssessmentDownload{{ orgCount }}" class="btn btn-tnth-primary" data-toggle="modal" data-target="#dataDownloadModal">Download patient assessment data for this clinic</a>
+          {% endif %}
 
+          <div id="adminTableToolbar{{org.id}}" class="admin-toolbar"><span id="tableCount{{org.id}}"></span></div>
+          <table id="adminTable{{org.id}}"
+                 data-table-id="adminTable{{org.id}}"
+                 class="tnth-admin-table"
+                 data-classes="table table-hover table-condensed table-striped table-responsive"
+                 data-toggle="table"
+                 data-sort-name="userid"
+                 data-sort-order="desc"
+                 data-search="true"
+                 data-pagination="true"
+                 data-page-size="50"
+                 data-page-list="[25,50,100,ALL]"
+                 data-toolbar="#adminTableToolbar{{org.id}}"
+                 data-show-toggle="true"
+                 data-show-columns="true"
+                 data-smart-display="true"
+                 >
+              <thead>
+                  <tr>
+                      <th data-field="userid" data-sortable="true" data-sorter="tnthTables.stripLinksSorter">ID</th>
+                      <th data-field="username" data-sortable="true">Username</th>
+                      <th data-field="firstname" data-sortable="true">First Name</th>
+                      <th data-field="lastname" data-sortable="true">Last Name</th>
+                      <th data-field="email" data-sortable="true">Email</th>
+                      <th data-field="provider_html" data-sortable="true">Reports</th>
+                  </tr>
+              </thead>
+              <tbody data-link="row" class="rowlink">
+              {% for user in org.users %}
+                  <tr>
+                      <td><a href="{{ url_for('patients.patient_profile', patient_id=user.id) }}">{{ user.id }}</a></td>
+                      <td>{{ user.username }}</td>
+                      <td>{{ user.first_name if user.first_name }}</td>
+                      <td>{{ user.last_name if user.last_name }}</td>
+                      <td>{{ user.email if user.email }}</td>
+                      <td class="rowlink-skip">{{ user.provider_html() | safe }}</td>
+                  </tr>
+              {% endfor %}
+              </tbody>
+          </table>
+      </div>
+    {% if orgCount < org_list_by_parent[parent_id]|length %}
+        <hr />
     {% endif %}
-
-    <div id="adminTableToolbar{{ orgCount }}" class="admin-toolbar"><span id="tableCount{{orgCount}}"></span></div>
-    <table id="adminTable{{orgCount}}"
-           data-table-id="{{orgCount}}"
-           class="tnth-admin-table"
-           data-classes="table table-hover table-condensed table-striped table-responsive"
-           data-toggle="table"
-           data-sort-name="userid"
-           data-sort-order="desc"
-           data-search="true"
-           data-pagination="true"
-           data-page-size="50"
-           data-page-list="[25,50,100,ALL]"
-           data-toolbar="#adminTableToolbar{{orgCount}}"
-           data-show-toggle="true"
-           data-show-columns="true"
-           data-smart-display="true"
-           >
-        <thead>
-            <tr>
-                <th data-field="userid" data-sortable="true" data-sorter="tnthTables.stripLinksSorter">ID</th>
-                <th data-field="username" data-sortable="true">Username</th>
-                <th data-field="firstname" data-sortable="true">First Name</th>
-                <th data-field="lastname" data-sortable="true">Last Name</th>
-                <th data-field="email" data-sortable="true">Email</th>
-                <th data-field="provider_html" data-sortable="true">Reports</th>
-            </tr>
-        </thead>
-        <tbody data-link="row" class="rowlink">
-        {% for user in patients_by_org[name] %}
-            <tr>
-                <td><a href="{{ url_for('patients.patient_profile', patient_id=user.id) }}">{{ user.id }}</a></td>
-                <td>{{ user.username }}</td>
-                <td>{{ user.first_name if user.first_name }}</td>
-                <td>{{ user.last_name if user.last_name }}</td>
-                <td>{{ user.email if user.email }}</td>
-                <td class="rowlink-skip">{{ user.provider_html() | safe }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-</div>
-{% if orgCount < org_list.keys()|length %}
-<hr />
-{% endif %}
-{% set orgCount = orgCount + 1 %}
+    {% set orgCount = orgCount + 1 %}
+  {% endfor %}
 {% endfor %}
 
 </div>
