switching remaining datetimes to dd/mm/yyyy format

--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -103,7 +103,7 @@
     <div class='form-group' style="margin: 0.5em 0.5em 0 0">
         <label>Date:</label>
         <div class="input-group date">
-            <input class='event-value form-control' type='text' placeholder='MM/DD/YYYY' maxlength='10' id='tnthproc-date' name='tnthproc-date'/>
+            <input class='event-value form-control' type='text' placeholder='DD/MM/YYYY' maxlength='10' id='tnthproc-date' name='tnthproc-date'/>
             <span class="input-group-addon">
                 <i class="fa fa-calendar"></i>
             </span>
