refine audit table, add navigation bar in profile, bug fix for org validation in account creation page, css fix for patients by org fix, mobile responsive css fixes

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -72,6 +72,80 @@ body {
   transition: visibility 0.5s ease-in;
 }
 
+#indexContainer {
+display: block;
+padding: 1.8em 2em;
+position: absolute;
+/*-webkit-transform: translate(-1000px, 0);
+transform(-1000px, 0);*/
+display: none;
+-webkit-transform: translate(0, -200px);
+transform: (0, -200px);
+transition: all 0.5s ease;
+z-index:9;
+width:25%;
+min-width:200px;
+max-width:100%;
+border-radius: 4px;
+background-color: #9b9c95;
+color: #FFF;
+font-size: 0.85em;
+-webkit-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
+-moz-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
+box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
+  .open {
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+  display: block;
+  }
+}
+
+#indexNavBar {
+  width: 100%;
+  max-width: 100%;
+  color: #575F5C;
+  border-top: 1px solid  #E0E6E3;
+  border-bottom: 1px solid  #E0E6E3;
+  padding: 0.2em 0.4em 0.1em 0.4em;
+  font-size: 0.9em;
+  background-image: linear-gradient(
+      to right,
+      rgba(173, 193, 197, 0.16), #FFF, rgba(173, 193, 197, 0.16), #FFF
+  );
+  vertical-align: center;
+
+  span {
+    cursor: pointer;
+    font-size: 1em;
+    -webkit-box-shadow: 1px 1px 1px 0px #777;
+    -moz-box-shadow: 1px 1px 1px 0px #777;
+    box-shadow: 1px 1px 1px 0px #777;
+    border-left: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+    border-radius: 2px;
+    padding: 0.3em;
+  }
+
+  #backLink {
+   position: relative;
+   top: -4px;
+   display: inline-block;
+  }
+}
+
+.orglist-download-container {
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  div {
+    margin-left: 0.2em;
+    margin-bottom: 0.5em;
+  }
+}
+
+
+
+
 a {
   color: @linkColor;
 }
@@ -422,13 +496,12 @@ btn {
 .profile-item-container {
   background-color: #EFF5F3;
   background-color: @sectionColor;
-  padding: 1.5em 2.3em;
+  padding: 1.5em 2em;
   border-radius: 8px;
   margin: 0.5em auto;
   border: 1px solid @sectionBorderColor;
   overflow-y: hidden;
   overflow-x: hidden;
-  padding: 1em;
 }
 
 .profile-item-title {
@@ -603,6 +676,10 @@ t
 #createProfileForm #phone, #createProfileForm #email {
     width: 350px;
     max-width: 100%;
+}
+
+#createProfileForm #userOrgs .smaller-text {
+  display: none;
 }
 
 .create-user-link {
@@ -971,6 +1048,10 @@ color: #777
 box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
 }
 
+div.columns input, div.search {
+  font-size:0.9em;
+}
+
 
 /** Responsive sizes **/
 @media (max-width: 480px) {
@@ -1001,6 +1082,10 @@ box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
   label,
   .tnth-form .form-group > label {
     font-size: 13px;
+  }
+
+  .profile-item-container {
+  padding: 1em;
   }
 
   .fixed-table-pagination {
@@ -1051,6 +1136,30 @@ box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
       max-width: 100%;
     }
   }
+
+  .orglist-download-container {
+    display: none;
+  }
+
+  div.search, div.columns {
+    font-size:0.9em;
+    margin-left: 0.1em;
+    margin-top:0;
+    margin-bottom: 0.5em;
+  }
+  div.columns {
+    top: 4px;
+  }
+  .profile-header, #indexNavBar {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  #indexNavBar #backLink {
+    top: -2px;
+  }
+
+  
 
 }
 
