--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1,3 +1,5 @@
+{% from "initial_queries_macros.html" import patientQGroup %}
+
 {% macro profileImage(person) -%}
     {% if person.image_url %}
         <div class="profile-img hidden-xs">
@@ -659,6 +661,70 @@
 			</div>
 		</div>
     {%endif %}
+
+    {% if (person and person.has_role('patient')) or (current_user and (current_user.has_role('admin') or current_user.has_role('provider'))) %}
+        <div class="row">
+            <div class="col-md-12">
+                <div class="profile-item-container">
+                    <h4 id="clinicalQuestionsLoc" class="profile-item-title">Clinical Questions</h4>
+                    {% if current_user.id != person.id %}<h4 class="text-muted">Questions asked of the patient at registration</h4>{% endif %}
+                    <input type="hidden" id="iq_userId" value="{{person.id}}" />
+                    <div class="well" style="margin-top: 1em; padding: 0.8em 2em 1em 2em">
+                        {{patientQGroup()}}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script>
+            function checkDiagnosis() {
+                var diag = $("#pca_diag_yes");
+
+                if (diag.is(":checked")) {
+                  diag.parents(".pat-q").nextAll().fadeIn();
+                } else {
+                  diag.parents(".pat-q").nextAll().fadeOut();
+                };
+            };
+            $(function () {
+                //$("#patientQ").show();
+                $("#patientQ hr").hide();
+                {% if person and current_user and person.id != current_user.id %} 
+                    $("#patientQ input[type='radio']").each(function() {
+                        $(this).attr("disabled", "disabled");
+                    });
+                {% endif %}
+
+                {% if person %}
+                    $(".pat-q input:radio").on("click",function(){
+                          var thisItem = $(this);
+                          var toCall = thisItem.attr("name")
+                          // Get value from div - either true or false
+                          var toSend = thisItem.val();
+                          tnthAjax.putClinical({{person.id}},toCall,toSend);
+                          if (toSend == "true" || toCall ==  "pca_localized") {
+                            thisItem.parents(".pat-q").nextAll().fadeIn();
+                            
+                          } else {
+                            if (toCall == "biopsy") {
+                              tnthAjax.putClinical({{person.id}},"pca_diag","false");
+                              tnthAjax.putClinical({{person.id}},"pca_localized","false");
+                              tnthAjax.putClinical({{person.id}},"tx","false");
+                            } else if (toCall == "pca_diag") {
+                              tnthAjax.putClinical({{person.id}},"pca_localized","false");
+                              tnthAjax.putClinical({{person.id}},"tx","false");
+                            }
+                            thisItem.parents(".pat-q").nextAll().fadeOut();
+                          };
+                      });
+                 {% endif %}
+
+                 //wait for ajax calls to finish?
+                 //hide rest of the questions if the patient hasn't been diagnosed with prostate cancer
+                 setTimeout("checkDiagnosis();", 1000);
+
+            });
+        </script>
+    {% endif %}
 
     {% if person and person.has_role('patient') and current_user.has_role('provider') %}
          <div class="row">
