add role restrictions back to profile.html

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -100,7 +100,7 @@ display: block;
   font-size: 0.9em;
   background-image: linear-gradient(
       to right,
-      rgba(173, 193, 197, 0.16), #FFF, rgba(173, 193, 197, 0.16), #FFF
+      #FFF, rgba(173, 193, 197, 0.16), #FFF, rgba(173, 193, 197, 0.16)
   );
   vertical-align: center;
 }
@@ -953,11 +953,6 @@ color: #777
 .tooltip.left .tooltip-arrow {
     border-left-color: #979a8d;
 }
-
-
-
-
-
 #consentContainer .consent {
   display: none;
   padding: 1.15em 1.3em;
@@ -1011,6 +1006,13 @@ box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
 
 div.columns input, div.search {
   font-size:0.9em;
+}
+
+a.btn-delete {
+  padding: 0.2em 0.4em 0.2em 0.3em
+}
+div.input-group.date {
+  margin-top:-2px;
 }
 
 /** Responsive sizes **/
