--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -129,7 +129,7 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
   font-size: 0.9em;
   background-image: linear-gradient(
       to right,
-      rgba(173, 193, 197, 0.16), #FFF, rgba(173, 193, 197, 0.16), #FFF
+      #FFF, rgba(173, 193, 197, 0.16), #FFF, rgba(173, 193, 197, 0.16)
   );
   vertical-align: center;
 
@@ -1073,6 +1073,12 @@ box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
 
 div.columns input, div.search {
   font-size:0.9em;
+}
+a.btn-delete {
+  padding: 0.2em 0.4em 0.2em 0.3em
+}
+div.input-group.date {
+  margin-top:-2px;
 }
 
 /** Responsive sizes **/
