--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -87,7 +87,7 @@ display: block;
   font-size: 0.9em;
   background-image: linear-gradient(
       to right,
-      rgba(173, 193, 197, 0.16), #FFF, rgba(173, 193, 197, 0.16), #FFF
+      #FFF, rgba(173, 193, 197, 0.16), #FFF, rgba(173, 193, 197, 0.16)
   );
   vertical-align: center;
 }
@@ -998,6 +998,13 @@ box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
 div.columns input, div.search {
   font-size:0.9em;
 }
+a.btn-delete {
+  padding: 0.2em 0.4em 0.2em 0.3em
+}
+div.input-group.date {
+  margin-top:-2px;
+}
+
 
 /*
 
