--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -12,7 +12,7 @@
 <div class="small orgLinks">
     <p>Skip to:</p>
     <ul style="list-style-type: circle">
-        {% for parent_id in org_list_by_parent | sort %}
+        {% for parent_id in org_list_by_parent %}
           {% for org in org_list_by_parent[parent_id] %}
               {% if org.id != parent_id %}
                 <ul style="list-style-type: disc"><li><a href="#location{{org.id}}">{{ org.name }}</a></li></ul>
@@ -27,7 +27,7 @@
 
 
 <hr />
-{% for parent_id in org_list_by_parent | sort%}
+{% for parent_id in org_list_by_parent %}
   {% set orgCount = 1 %}
   {% for org in org_list_by_parent[parent_id] %}
       <div class="admin-table table-responsive smaller-text">
