allow clinical questions be viewable by staff in profile, css and permission fixes in profile.html, sort patient list by org id

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1004,7 +1004,7 @@ color: #777
 box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
 }
 
-div.columns input, div.search {
+div.search input, div.columns {
   font-size:0.9em;
 }
 
