--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -995,7 +995,7 @@ color: #777
 -moz-box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
 box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
 }
-div.columns input, div.search {
+div.search input, div.columns {
   font-size:0.9em;
 }
 a.btn-delete {
