--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1057,7 +1057,7 @@ color: #777
 box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
 }
 
-div.columns input, div.search {
+div.search input, div.columns {
   font-size:0.9em;
 }
 
@@ -1175,7 +1175,7 @@ div.input-group.date {
     top: -2px;
   }
 
-  
+
 
 }
 
