--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -9,7 +9,7 @@
     }
 </style>
 <div id="fullSizeBox" class="box-min-400">
-    <img src="{{ url_for('static', filename='img/bg_canoe.jpg') }}" class="img-responsive hidden-xs" />
+    <img src="{{ url_for('static', filename='img/twoMen.jpg') }}" class="img-responsive hidden-xs" />
 
     <div id="fullSizeContainer">
 
